# Dm_telegram_bot

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/core/: config_settings.py
app/infrastructure/: schemas.py
app/infrastructure/bd/: models.py  session_to_postgres.py
app/infrastructure/repositories/: user_repositorie.py
app/interfaces/: animation.py
app/interfaces/states/: user_states.py
app/interfaces/telegram/start/commands/: base_command.py
app/interfaces/telegram/start/keyboards/: start_keyboard.py
app/services/: user_services.py
migrations/: env.py
migrations/versions/: 4be0eb6d045b_added_new_field_to_user_user_status_.py  cb17e687499d_user_model.py  ece073ac2980_added_new_field_to_user_user_status.py
