[project]
name = "dm-telegram-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Grishankov",email = "ben300300@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "aiogram (>=3.19.0,<4.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "autoflake (>=2.3.1,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
